Falta bootstrap y animaciones

--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -22,8 +22,35 @@
             </nav>
         </header>
         <main>
-            <section> 
-
+            <section class="banner-perfil">
+                <div class="img-a"><img src="../img/foto.jpg" alt=""></div>
+                <div class="img-b"><img src="../img/foto-a.jpg" alt=""></div>
+                <div class="img-c"><img src="../img/foto-c.jpg" alt=""></div>
+                <div class="img-d"><img src="../img/foto-b.jpg" alt=""></div>
+                <div class="img-e"><img src="../img/foto-d.jpg" alt=""></div>
+            </section>
+            <section class="banner-title">
+                    <h2>Inicia sesión</h2>
+                    <h3>Te estamos esperando</h3>
+            </section>
+            <section class="logueo">
+                <form action="" class="logueo-form">
+                    <h2>Email</h2>
+                    <div class="logueo-email">
+                        <label for="email"></label>
+                        <input type="email" name="email"> 
+                    </div>
+                    <h2>Contraseña</h2>
+                    <div class="logueo-pass">
+                        <label for="contrasenia"></label>
+                        <input type="password" name="contrasenia">
+                    </div>     
+                    <a href="">¿Olvidó su contraseña?</a>                    
+                    <div class="logueo-boton">
+                        <label for="boton"></label>
+                        <input type="submit" name="boton" id="" class="button">
+                    </div>
+                </form>
             </section>
         </main>
         <footer> 
