cambio asesoria por planes

--- a/pages/planes.html
+++ b/pages/planes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Strong Anubis | Asesorías</title>
+    <title>Strong Anubis | Planes</title>
 </head>
 <body>
     <div class="grid-container">
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./nosotros.html">Nosotros</a></li>
-                    <li><a href="./asesorias.html">Asesorías</a></li>
+                    <li><a href="./planes.html">Planes</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                     <li><a href="./miperfil.html">Mi Perfil</a></li>
                 </ul>
