--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Strong Anubis | Tu mejor versión te espera</title>
 </head>
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="./pages/asesorias.html">Asesorías</a></li>
+                    <li><a href="./pages/planes.html">Planes</a></li>
                     <li><a href="./pages/contacto.html">Contacto</a></li>
                     <li><a href="./pages/miperfil.html">Mi Perfil</a></li>
                 </ul>
@@ -27,7 +27,7 @@
                 <div>
                     <h2>No te quedes sin tu asesoramiento</h2>
                     <h3>¡Somos tu mejor equipo!</h3>
-                    <a href="./pages/asesorias.html">Sumate al team Strong Anubis</a>
+                    <a href="./pages/planes.html">Sumate al team Strong Anubis</a>
                 </div>
             </section>
             <section class="info">
