Solo falta animaciones

--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Strong Anubis | Tu mejor versión te espera</title>
 </head>
+
 <body>
     <div class="grid-container">
         <header>
-            <a href="./index.html"><h1><span>S</span>trong <span>A</span>nubis</h1></a>
-            <nav class="menu">
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="./pages/planes.html">Planes</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
-                    <li><a href="./pages/miperfil.html">Mi Perfil</a></li>
-                </ul>
+            <a href="./index.html">
+                <h1><span>S</span>trong <span>A</span>nubis</h1>
+            </a>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./pages/planes.html">Planes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./pages/miperfil.html">Mi Perfil</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
         <main>
@@ -34,17 +57,21 @@
                 <div class="info-a">
                     <img src="./img/entrenadores.png" alt="Img entrenadores">
                     <h2>ENTRENADORES PERSONALES FITNESS</h2>
-                    <p>Alcanza tu meta física deseada con un plan de entrenamiento y nutrición adecuado a vos. Nosotros ponemos la experiencia vos tenes que poner la constancia.</p>
+                    <p>Alcanza tu meta física deseada con un plan de entrenamiento y nutrición adecuado a vos. Nosotros
+                        ponemos la experiencia vos tenes que poner la constancia.</p>
                 </div>
                 <div class="info-b">
                     <img src="./img/plan-alimenticio.png" alt="Img planes nutricionales">
                     <h2>PLANES NUTRICIONALES</h2>
-                    <p>Planes para definición o para aumentar la masa muscular, todo adaptado a tus requisitos y a tus objetivos. Combinación de entrenamiento de fuerza y cardiovascular para alcanzar tu mejor forma.</p>
+                    <p>Planes para definición o para aumentar la masa muscular, todo adaptado a tus requisitos y a tus
+                        objetivos. Combinación de entrenamiento de fuerza y cardiovascular para alcanzar tu mejor forma.
+                    </p>
                 </div>
                 <div class="info-c">
                     <img src="./img/suplementos.png" alt="Img suplementacion">
                     <h2>ASESORAMIENTO SUPLEMENTACIÓN DEPORTIVA</h2>
-                    <p>Mucho más que un plan para lograr definir tu cuerpo o aumentar la musculatura. Lleva tu cuerpo al siguiente nivel con los aprendizajes que conseguirás en cada fase de tu preparación.</p>
+                    <p>Mucho más que un plan para lograr definir tu cuerpo o aumentar la musculatura. Lleva tu cuerpo al
+                        siguiente nivel con los aprendizajes que conseguirás en cada fase de tu preparación.</p>
                 </div>
             </section>
             <section class="planes">
@@ -86,56 +113,61 @@
                 <div class="galery-a">
                     <h2>Nutrición</h2>
                     <img src="./img/nutricion.jpg" alt="Img nutricion">
-                    <p>Plan de alimentación para que logres tus objetivos de la mejor forma. 
-                    La clave que tu cuerpo necesita para el verdadero cambio.</p>
+                    <p>Plan de alimentación para que logres tus objetivos de la mejor forma.
+                        La clave que tu cuerpo necesita para el verdadero cambio.</p>
                 </div>
                 <div class="galery-b">
                     <h2>Suplementación</h2>
                     <img src="./img/suplementacion.jpg" alt="Img suplementacion">
                     <p>Ayuda para complementar el plan de alimentación y promover el bienestar del organismo.
-                    Evolución física y mejora en la salud.</p>
+                        Evolución física y mejora en la salud.</p>
                 </div>
                 <div class="galery-c">
                     <h2>Entrenamiento</h2>
                     <img src="./img/entrenamiento.jpeg" alt="Img entrenamiento">
                     <p>Rutinas de entrenamiento para fines estéticos, powerlifiting, deportes o lo que
-                    vos necesites.</p>
+                        vos necesites.</p>
                 </div>
-                
+
             </section>
         </main>
-        <footer> 
+        <footer>
             <div class="footer-left">
-                <a href="./index.html"><h1><span>S</span>trong <span>A</span>nubis</h1></a>
+                <a href="./index.html">
+                    <h1><span>S</span>trong <span>A</span>nubis</h1>
+                </a>
                 <p>Tu mejor versión te espera. Pedinos tu rutina de entrenamiento y alimentación al mejor precio.</p>
                 <div class="footer-social-media">
                     <ul>
                         <h2>Seguinos</h2>
                         <li><a href="https://www.facebook.com/" target="_blank">
-                            <img src="./img/facebook.png" alt="Logo de Facebook"></a>
+                                <img src="./img/facebook.png" alt="Logo de Facebook"></a>
                         </li>
                         <li><a href="https://twitter.com/" target="_blank">
-                            <img src="./img/twitter.png" alt="Logo de Twitter">
-                        </a></li>
+                                <img src="./img/twitter.png" alt="Logo de Twitter">
+                            </a></li>
                         <li><a href="https://www.instagram.com/" target="_blank">
-                            <img src="./img/instagram.png" alt="Logo de Instagram">
-                        </a></li>
+                                <img src="./img/instagram.png" alt="Logo de Instagram">
+                            </a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-right">
-                    <h2>Contacto</h2>
-                    <div class="footer-right-a">
-                        <h3>Strong Anubis</h3>
-                        <p>Contactanos, estamos para ayudarte.</p>
-                    </div>
-                    <div>
-                        <p>Email: stronganubis@gmail.com</p>
-                        <p>Tel: 11-1111-1111</p>
-                    </div>
+                <h2>Contacto</h2>
+                <div class="footer-right-a">
+                    <h3>Strong Anubis</h3>
+                    <p>Contactanos, estamos para ayudarte.</p>
+                </div>
+                <div>
+                    <p>Email: stronganubis@gmail.com</p>
+                    <p>Tel: 11-1111-1111</p>
+                </div>
             </div>
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
