--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,14 +12,32 @@
     <div class="grid-container">
         <header>
             <a href="../index.html"><h1><span>S</span>trong <span>A</span>nubis</h1></a>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./nosotros.html">Nosotros</a></li>
-                    <li><a href="./planes.html">Planes</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
-                    <li><a href="./miperfil.html">Mi Perfil</a></li>
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./planes.html">Planes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./miperfil.html">Mi Perfil</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
         <main>
