listo para entregar

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </section>
             <section class="planes-boton">
                 <div class="boton">
-                    <a href="./pages/asesorias.html">Ver más planes</a>
+                    <a href="./pages/planes.html">Ver más planes</a>
                 </div>
             </section>
             <section class="img-galery">
