listo para entregar

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -80,7 +80,7 @@
                         </div>
                         <div>
                             <label for="boton"></label>
-                            <input type="submit" name="enviar" id="">
+                            <input type="submit" name="enviar" id="" class="boton-enviar">
                         </div>
                     </form>
                 </div>
