--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Strong Anubis | Contacto</title>
 </head>
 <body>
@@ -78,9 +79,9 @@
                         <div class="dudas">  
                             <textarea name="" id="" cols="79" rows="15" placeholder="Comentanos tus dudas..."></textarea>
                         </div>
-                        <div>
+                        <div class="boton-enviar">
                             <label for="boton"></label>
-                            <input type="submit" name="enviar" id="" class="boton-enviar">
+                            <input type="submit" name="enviar" id="">
                         </div>
                     </form>
                 </div>
