--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Strong Anubis | Mi perfil</title>
 </head>
 <body>
@@ -41,16 +42,18 @@
             </nav>
         </header>
         <main>
-            <section class="banner-perfil">
-                <div class="img-a"><img src="../img/foto.jpg" alt=""></div>
-                <div class="img-b"><img src="../img/foto-a.jpg" alt=""></div>
-                <div class="img-c"><img src="../img/foto-c.jpg" alt=""></div>
-                <div class="img-d"><img src="../img/foto-b.jpg" alt=""></div>
-                <div class="img-e"><img src="../img/foto-d.jpg" alt=""></div>
-            </section>
-            <section class="banner-title">
-                    <h2>Inicia sesión</h2>
-                    <h3>Te estamos esperando</h3>
+            <section class="mi-perfil">
+                <div class="banner-perfil">
+                    <div class="img-a"><img src="../img/foto.jpg" alt=""></div>
+                    <div class="img-b"><img src="../img/foto-a.jpg" alt=""></div>
+                    <div class="img-c"><img src="../img/foto-c.jpg" alt=""></div>
+                    <div class="img-d"><img src="../img/foto-b.jpg" alt=""></div>
+                    <div class="img-e"><img src="../img/foto-d.jpg" alt=""></div>
+                    <div class="banner-title">
+                        <h2>Inicia sesión</h2>
+                        <h3>Te estamos esperando</h3>
+                    </div>
+                </div>
             </section>
             <section class="logueo">
                 <form action="" class="logueo-form">
