estructuras y estilo listo

--- a/pages/planes.html
+++ b/pages/planes.html
@@ -42,6 +42,12 @@
             </nav>
         </header>
         <main>
+            <section class="banner-planes">
+                <div>
+                    <h2>Los mejores planes ajustados a vos</h2>
+                    <h3>¡No te quedes sin el tuyo!</h3>
+                </div>
+            </section>
             <section class="planes-asesorias">
                 <div class="plan-tarjeta">
                     <img src="../img/plan-a.jpg" alt="Plan A">
