--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Strong Anubis | Tu mejor versión te espera</title>
+    <meta name="description" content="Asesorías personalizadas para ayudarte a conseguir ese cambio físico o ese plus en tus entrenamientos y/o nutrición que buscas, tu mejor versión te espera.">
+    <meta name="keywords" content="strong anubis, asesorias, plan, planes, nutricion, entrenamiento, rutinas, gimnasio, cambio fisico, dieta, alimentacion, ejercicio, entrenador personal, personalizado">
 </head>
 <body>
     <div class="grid-container">
