Implementacion de SEO

--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Strong Anubis | Tu mejor versión te espera</title>
     <meta name="description" content="Asesorías personalizadas para ayudarte a conseguir ese cambio físico o ese plus en tus entrenamientos y/o nutrición que buscas, tu mejor versión te espera.">
-    <meta name="keywords" content="strong anubis, asesorias, plan, planes, nutricion, entrenamiento, rutinas, gimnasio, cambio fisico, dieta, alimentacion, ejercicio, entrenador personal, personalizado">
+    <meta name="keywords" content="strong anubis, asesorias, plan, planes, nutricion, entrenamiento, personalizado, rutinas, gimnasio, cambio fisico, dieta, alimentacion, ejercicio, entrenador, personal">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Strong Anubis | Tu mejor versión te espera">
+    <meta property="og:url" content="https://stronganubis.netlify.app/">
+    <meta property="og:image" content="">
+
 </head>
 <body>
     <div class="grid-container">
         <header>
             <a href="./index.html">
+                <img src="./img/logo-anubis.jpeg" alt="Logo Anubis">
                 <h1><span>S</span>trong <span>A</span>nubis</h1>
             </a>
             <nav class="navbar navbar-expand-lg navbar-dark bg-light">
