integracion de seo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Strong Anubis | Tu mejor versión te espera</title>
+    
     <meta name="description" content="Asesorías personalizadas para ayudarte a conseguir ese cambio físico o ese plus en tus entrenamientos y/o nutrición que buscas, tu mejor versión te espera.">
     <meta name="keywords" content="strong anubis, asesorias, plan, planes, nutricion, entrenamiento, personalizado, rutinas, gimnasio, cambio fisico, dieta, alimentacion, ejercicio, entrenador, personal">
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Strong Anubis | Tu mejor versión te espera">
     <meta property="og:url" content="https://stronganubis.netlify.app/">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://stronganubis.netlify.app/img/logo-anubis.jpeg">
 
 </head>
 <body>
