--- a/pages/planes.html
+++ b/pages/planes.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Strong Anubis | Planes</title>
 </head>
 <body>
     <div class="grid-container">
         <header>
-            <a href="../index.html"><h1><span>S</span>trong <span>A</span>nubis</h1></a>
+            <a href="../index.html">
+                <img src="../img/logo-anubis.jpeg" alt="Logo Anubis">
+                <h1><span>S</span>trong <span>A</span>nubis</h1>
+            </a>
             <nav class="navbar navbar-expand-lg navbar-dark bg-light">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
