--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Strong Anubis | Contacto</title>
+    <meta name="description" content="Contactate con nosotros y comentanos cuales son tus dudas, te vamos a ayudar a despejarlas en el menor tiempo posible, de la mano de profesionales expertos.">
+    <meta name="keywords" content="strong anubis, asesorias, plan, planes, nutricion, entrenamiento, rutinas, gimnasio, dieta, alimentacion, ejercicio, entrenador, contacto, dudas, redes, mail, telefono.">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Strong Anubis | Contacto">
+    <meta property="og:url" content="https://stronganubis.netlify.app/pages/contacto.html">
+    <meta property="og:image" content="https://stronganubis.netlify.app/img/logo-anubis.jpeg">
+    <meta property="og:description" content="Contactate con nosotros y comentanos cuales son tus dudas, te vamos a ayudar a despejarlas en el menor tiempo posible, de la mano de profesionales expertos.">
 </head>
 <body>
     <div class="grid-container">
