--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -7,6 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Strong Anubis | Mi perfil</title>
+    <meta name="description" content="Crea tu propio usuario con el que vas a poder ver desde nuestra pagina tu rutina y/o plan alimenticio actualizado una vez hayas elegido el que más se adapte a vos.">
+    <meta name="keywords" content="strong anubis, asesorias, plan, planes, nutricion, entrenamiento, rutinas, gimnasio, dieta, alimentacion, ejercicio, entrenador, perfil, usuario, registrarse.">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Strong Anubis | Mi perfil">
+    <meta property="og:url" content="https://stronganubis.netlify.app/pages/miperfil.html">
+    <meta property="og:image" content="https://stronganubis.netlify.app/img/logo-anubis.jpeg">
+    <meta property="og:description" content="Crea tu propio usuario con el que vas a poder ver desde nuestra pagina tu rutina y/o plan alimenticio actualizado una vez hayas elegido el que más se adapte a vos.">
 </head>
 <body>
     <div class="grid-container">
