--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,6 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Strong Anubis | Nosotros</title>
+    <meta name="description" content="Conozcamonos un poco mejor! aprende más acerca de lo que hacemos y por qué es que lo hacemos con tanta pasión y entusiasmo.">
+    <meta name="keywords" content="strong anubis, asesorias, plan, planes, nutricion, entrenamiento, rutinas, gimnasio, dieta, alimentacion, ejercicio, entrenador, nosotros.">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Strong Anubis | Nosotros">
+    <meta property="og:url" content="https://stronganubis.netlify.app/pages/nosotros.html">
+    <meta property="og:image" content="https://stronganubis.netlify.app/img/logo-anubis.jpeg">
+    <meta property="og:description" content="Conozcamonos un poco mejor! aprende más acerca de lo que hacemos y por qué es que lo hacemos con tanta pasión y entusiasmo.">
 </head>
 <body>
     <div class="grid-container">
