--- a/pages/planes.html
+++ b/pages/planes.html
@@ -7,6 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Strong Anubis | Planes</title>
+    <meta name="description" content="Asesorias personalizadas, tenemos una amplia variedad de planes, elegi el que mas se adapte a vos y comenza el camino hacia esa mejor versión que tanto buscas.">
+    <meta name="keywords" content="strong anubis, asesorias, nutricion, entrenamiento, rutinas, gimnasio, dieta, alimentacion, ejercicio, entrenador, personalizado, plan, planes.">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Strong Anubis | Planes">
+    <meta property="og:url" content="https://stronganubis.netlify.app/pages/planes.html">
+    <meta property="og:image" content="https://stronganubis.netlify.app/img/logo-anubis.jpeg">
+    <meta property="og:description" content="Asesorias personalizadas, tenemos una amplia variedad de planes, elegi el que mas se adapte a vos y comenza el camino hacia esa mejor versión que tanto buscas.">
 </head>
 <body>
     <div class="grid-container">
