--- a/index.html
+++ b/index.html
@@ -20,37 +20,41 @@
 <body>
     <div class="grid-container">
         <header>
-            <a href="./index.html">
-                <img src="./img/logo-anubis.jpeg" alt="Logo Anubis">
-                <h1><span>S</span>trong <span>A</span>nubis</h1>
-            </a>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="./pages/planes.html">Planes</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="./pages/miperfil.html">Mi Perfil</a>
-                            </li>
-                        </ul>
+            <section class="logo-inicio">
+                <a href="./index.html">
+                    <img src="./img/logo-anubis.jpeg" alt="Logo Anubis">
+                    <h1><span>S</span>trong <span>A</span>nubis</h1>
+                </a>
+            </section>
+            <section class="navegacion">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="./pages/planes.html">Planes</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="./pages/miperfil.html">Mi Perfil</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </section> 
         </header>
         <main>
             <section class="banner">
