--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <section class="navegacion">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
                     <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
@@ -39,16 +38,16 @@
                                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
+                                    <a class="nav-link" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="./pages/planes.html">Planes</a>
+                                    <a class="nav-link" aria-current="page" href="./pages/planes.html">Planes</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
+                                    <a class="nav-link" aria-current="page" href="./pages/contacto.html">Contacto</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="./pages/miperfil.html">Mi Perfil</a>
+                                    <a class="nav-link" aria-current="page" href="./pages/miperfil.html">Mi Perfil</a>
                                 </li>
                             </ul>
                         </div>
