--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -34,19 +34,19 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="./planes.html">Planes</a>
+                                    <a class="nav-link" aria-current="page" href="./planes.html">Planes</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="./contacto.html">Contacto</a>
+                                    <a class="nav-link" aria-current="page" href="./contacto.html">Contacto</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="./miperfil.html">Mi Perfil</a>
+                                    <a class="nav-link" aria-current="page" href="./miperfil.html">Mi Perfil</a>
                                 </li>
                             </ul>
                         </div>
@@ -102,5 +102,8 @@
             </div>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
