--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,7 +61,7 @@
             </section>
             <section class="nosotros">
                 <div>
-                    <h2>Quiénes somos</h2> <!--Fade up-->
+                    <h2>Quiénes somos</h2> 
                     <p>El Team Strong Anubis surgio de la pasion por el entrenamiento y el mundo fitness de dos amigos, casi hermanos de la vida, que en una de esas noches de desvelo se quedaron soñando con los ojos abiertos, imaginandose un futuro pudiendo ayudar a las personas a encontrarse con el entrenamiento, con la vida fitnees, con eso que a ellos le llenaba tanto el corazon. Cada uno por su lado se profecionalizó en la rama que mas le atraia y despues de mucho estan haciendo su sueño realidad, con la misma pasión que desde un principio.</p>
                     <h3>¿Qué hacemos?</h3>
                     <p>Te brindamos asesoramiento para que puedas entrenar y alimentarte de la forma mas optima para asi conseguir ese cambio o ese plus en tu vida que tanto queres. Atencion por profesionales calificados, que van a dar todo de si para brindarte la mejor experiencia.</p>
